<resources>
    <string name="app_name">TestGustavoInterbank</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">Home</string>
    <string name="menu_notifications">Notifications</string>
    <string name="user_phone_hint">Número de teléfono</string>
    <string name="user_password_hint">Password</string>
    <string name="user_login">Login</string>
    <string name="fragment_notifications">Notifications</string>
    <string name="title_detail">Detalles</string>
    <string name="title_notifications">notificaciones</string>
    <string name="menu_products">Productos</string>
    <string name="menu_operations">Operaciones</string>
    <string name="title_products">Productos</string>
    <string name="title_operations">Operaciones</string>
    <string name="title_moves">Movimientos</string>
    <string name="number_account">Número de cuenta</string>
    <string name="copy">Copiar</string>
    <string name="movements">Movimientos</string>
    <string name="user_dni_hint">DNI</string>
</resources>