<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.Login.Login.LoginFragment">
        <!--Lineas Guia-->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.10" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.90" />

        <!--Contenido-->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_user"
            app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toTopOf="@+id/guidelineTop" />

        <!--Telefono Input-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputDniLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/user_dni_hint"
            android:textColorHint="@color/gray"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/gray"
            app:hintTextColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toTopOf="@+id/guidelineBottom"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginTop="10dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputDniLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:longClickable="false"
                android:maxLength="8"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Password Input-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPasswordLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/user_password_hint"
            android:textColorHint="@color/gray"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/gray"
            app:hintTextColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/textInputDniLayout"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLength="60"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Login Button-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLoginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/user_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/textInputPasswordLayout"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginTop="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>