<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        tools:context=".ui.Menu.Moves.MovesFragment">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:cardBackgroundColor="@color/orange"
            app:cardCornerRadius="4dp"
            app:cardPreventCornerOverlap="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="10dp">
                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/productGuideLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent=".50" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/productGuideLine2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent=".20" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/productGuideLine3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent=".72" />

                <ImageView
                    android:id="@+id/imgCar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_margin="18dp"
                    android:src="@drawable/ic_launcher_background"
                    app:layout_constraintBottom_toTopOf="@+id/productGuideLine"
                    app:layout_constraintEnd_toStartOf="@+id/productGuideLine2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    tools:text="Cuenta Soles"
                    android:id="@+id/cuenta_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/productGuideLine2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    />

                <com.google.android.material.textview.MaterialTextView
                    tools:text="S/. 1,000.00"
                    android:id="@+id/cuenta_mount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/productGuideLine2"
                    app:layout_constraintTop_toBottomOf="@+id/cuenta_type"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/materialTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/number_account"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toStartOf="@+id/productGuideLine3"
                    app:layout_constraintStart_toStartOf="@+id/imgCar"
                    app:layout_constraintTop_toTopOf="@+id/productGuideLine" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/cuenta_number"
                    tools:text="99999999999"
                    android:layout_width="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toStartOf="@+id/productGuideLine3"
                    app:layout_constraintStart_toStartOf="@+id/materialTextView"
                    app:layout_constraintTop_toBottomOf="@+id/materialTextView" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/teal_200"
                    android:text="@string/copy"
                    android:layout_marginEnd="5dp"
                    app:cornerRadius="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/productGuideLine3"
                    app:layout_constraintTop_toTopOf="@+id/productGuideLine"
                    app:layout_constraintVertical_bias="0.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:text="@string/movements"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/cardProduct"
            app:layout_constraintTop_toBottomOf="@+id/cardProduct" />

        <androidx.recyclerview.widget.RecyclerView
            tools:listitem="@layout/item_move_layout"
            tools:itemCount="5"
            android:id="@+id/recyclerViewCars"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/cardProduct"
            app:layout_constraintStart_toStartOf="@+id/materialTextView2"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>